# Paimon-No-Way-Home

./: CMakeLists.txt  app.rc  imgui.ini  readme.md
assets/models/: botato_gate.mtl
assets/shaders/: checkerboard.frag  color-mixer.frag  default-bloom.frag  default.frag  default.vert  test.frag  textured.frag  tinted.frag  transform-test.vert  triangle.vert
assets/shaders/postprocess/: bloom.frag  blur.frag  chromatic-aberration.frag  vignette.frag
config/: app.jsonc  dance.jsonc  launcher.jsonc  level-0.jsonc  level-1.jsonc  level-2.jsonc  tutorial-0.jsonc
config/levels/: level-0.jsonc  level-1.jsonc  level-2.jsonc  level-3.jsonc  level-4.jsonc
source/: globals.h  main.cpp
source/common/: application.cpp  application.hpp  asset-loader.cpp  asset-loader.hpp  deserialize-utils.hpp
source/common/audio/: audio.cpp  audio.hpp
source/common/components/: ConeLight.cpp  ConeLight.h  DirectionalLight.cpp  DirectionalLight.hpp  Ground.cpp  Ground.hpp  Mora.cpp  Mora.h  Mora.hpp  OrbitalCameraComponent.cpp  OrbitalCameraComponent.h  Paimon.cpp  Paimon.hpp  PaimonIdle.cpp  PaimonIdle.hpp  SpotLight.cpp  SpotLight.h  camera.cpp  component-deserializer.hpp  event-controller.cpp  event-controller.h  mesh-renderer.cpp  mesh-renderer.hpp
source/common/components/actions/: StateAnimator.cpp  StateAnimator.h  action-receiver.cpp  action-receiver.h
source/common/ecs/: component.hpp  entity.cpp  entity.hpp  transform.cpp  world.cpp  world.hpp
source/common/material/: material.cpp  material.hpp  pipeline-state.cpp  pipeline-state.hpp
source/common/mesh/: mesh-utils.cpp  mesh.hpp
source/common/shader/: shader.cpp  shader.hpp
source/common/systems/: CollectablesSystem.h  Level-mapping.h  Level-mapping.hpp  collision.cpp  collision.hpp  common.h  events-system-controller.cpp  events-system-controller.hpp  forward-renderer.cpp  forward-renderer.hpp  ground-system.cpp  ground-system.hpp  orbital-camera-controller.hpp  paimon-idle.hpp  paimon-movement.cpp  paimon-movement.hpp  state-system.hpp
source/common/texture/: framebuffer.cpp  framebuffer.h  sampler.hpp  texture-utils.cpp
source/states/: entity-test-state.hpp  level-menu-state.h  main-menu-state.h  menu-state.hpp  play-state.hpp  splash-screen-state.hpp
